--- a/web/pages/docs/learn/analytics.mdx
+++ b/web/pages/docs/learn/analytics.mdx
@@ -1,7 +1,7 @@
----
-id: analytics
-title: Analytics
----
+import DocsLayout from "../../../layouts/docs";
+
+<DocsLayout title="Analytics">
+
 
 The Replicate CLI sends anonymous analytics about commands you run. You will be notified the first time you run `replicate`.
 
@@ -21,20 +21,19 @@ It helps us:
 - Your CPU architecture (e.g. `amd64`)
 - Your operating system (e.g. `linux`)
 
-## Where it's sent
-
-Data is sent to Segment, then Mixpanel. We're figuring out what our retention policy will be.
-
 ## Opting out
 
-These analytics really help us, and we'd really appreciate it if you left it on. But, if you want to opt out, you can set this environment variable:
+These analytics really help us, and we'd really appreciate it if you left it on. But, if you want to opt out, you can run this command:
+
+```
+replicate analytics off
+```
+
+Or, you can use an environment variable:
 
 ```
 export REPLICATE_NO_ANALYTICS=1
 ```
 
-Or, run this command:
+</DocsLayout>
 
-```
-replicate analytics off
-```
