--- a/web/pages/docs/tutorial/index.mdx
+++ b/web/pages/docs/tutorial/index.mdx
@@ -7,9 +7,9 @@ import Note from "../../../components/note";
 
 This guide will help you learn how Replicate works by building a simple model.
 
-## Write a model
-
 We're going to make a model that classifies Iris plants, trained on the [Iris dataset](https://archive.ics.uci.edu/ml/datasets/iris). It's an intentionally simple model that trains really fast, just so we can show you how Replicate works.
+
+## Install dependencies
 
 First, let's make a directory to work in:
 
@@ -18,7 +18,30 @@ mkdir iris-classifier
 cd iris-classifier
 ```
 
-Then, copy and paste this code into `train.py`:
+Replicate is a Python package, and we need a few other Python packages to make the model run.
+
+Create `requirements.txt` to define the Python packages to install:
+
+<CodeBlock className="txt" metastring='title="requirements.txt"'>
+  {`replicate==` +
+    process.env.NEXT_PUBLIC_VERSION +
+    `
+scikit-learn==0.23.1
+torch==1.4.0
+`}
+</CodeBlock>
+
+Then, install them:
+
+```shell-session
+pip install -r requirements.txt
+```
+
+You might want to use a [Virtualenv](https://virtualenv.pypa.io/en/latest/) or [Conda](https://docs.conda.io/en/latest/) so these packages don't collide with others on your computer.
+
+## Write a model
+
+Copy and paste this code into `train.py`:
 
 <CodeBlock className="python" metastring='title="train.py"'>
   {require("!!raw-loader!../../../../example/train.py").default}
@@ -31,29 +54,6 @@ The first is `replicate.init()`. This creates an **experiment**, which represent
 The second is `experiment.checkpoint()`. This creates a **checkpoint** within the experiment. The checkpoint saves the metrics at that point, and makes a copy of the file or directory you pass to it, which could include weights and any other artifacts.
 
 **Each experiment contains multiple checkpoints.** You typically save your model periodically during training, because the best result isn't necessarily the most recent one. A checkpoint is created just after you save your model, so Replicate can keep track of versions of your saved model.
-
-## Install the dependencies
-
-Before we start training, we need to install the Python packages that the model needs.
-
-Create `requirements.txt` to define our requirements:
-
-<CodeBlock className="txt" metastring='title="requirements.txt"'>
-  {`replicate==` +
-    process.env.NEXT_PUBLIC_VERSION +
-    `
-scikit-learn==0.23.1
-torch==1.4.0
-`}
-</CodeBlock>
-
-Then, install the Python requirements inside a [Virtualenv](https://virtualenv.pypa.io/en/latest/):
-
-```shell-session
-virtualenv venv
-source venv/bin/activate
-pip install -r requirements.txt
-```
 
 ## Train the model
 
