--- a/web/pages/docs/learn/analytics.mdx
+++ b/web/pages/docs/learn/analytics.mdx
@@ -3,7 +3,9 @@ import DocsLayout from "../../../layouts/docs";
 <DocsLayout title="Analytics">
 
 
-The Replicate CLI sends anonymous analytics about commands you run. You will be notified the first time you run `replicate`.
+The Replicate CLI sends anonymous analytics about commands you run. 
+
+You will be notified the first time you run `replicate`.
 
 ## Why we do this
 
