--- a/web/pages/docs/reference/cli.mdx
+++ b/web/pages/docs/reference/cli.mdx
@@ -6,7 +6,9 @@ import DocsLayout from "../../../layouts/docs";
 
 <DocsLayout title="CLI reference">
 
-This is the reference for the Replicate command-line interface. You can also see this in the terminal by running `replicate --help` or `replicate command --help`.
+This is the reference for the Replicate command-line interface. 
+
+You can also see this in the terminal by running `replicate --help` or `replicate command --help`.
 
 To install the command-line interface, [see the installation instructions](/docs).
 
