--- a/web/pages/docs/guides/keras-integration.mdx
+++ b/web/pages/docs/guides/keras-integration.mdx
@@ -3,7 +3,7 @@ import DocsLayout from "../../../layouts/docs";
 <DocsLayout title="Keras integration">
 
 
-_Note: This is an experimental feature, and the API may change in the future._
+_This is an experimental feature, and the API may change in the future._
 
 Replicate works with any machine learning framework, but it includes a callback that makes it easier to use with Keras.
 
