--- a/web/pages/docs/reference/yaml.mdx
+++ b/web/pages/docs/reference/yaml.mdx
@@ -4,7 +4,9 @@ import DocsLayout from "../../../layouts/docs";
 <DocsLayout title="replicate.yaml reference">
 
 
-The `replicate.yaml` file tells Replicate how to train your model and where to store it. This page is a comprehensive reference for it. To get an introduction on how to write it, see [working with remote machines](/docs/tutorial/remote-machines).
+The `replicate.yaml` file tells Replicate how to train your model and where to store it. 
+
+This page is a comprehensive reference for it. To get an introduction on how to write it, see [working with remote machines](/docs/tutorial/remote-machines).
 
 <!-- `replicate.yaml` goes in the same directory as your model's source code. It must be in the root directory (the same directory as the root of your Git repository, for example) because Replicate uses the location of the file to figure out where your model is located. (maybe this lives in tutorial) -->
 
