added placeholder icons on homepage

--- a/web/pages/docs/index.mdx
+++ b/web/pages/docs/index.mdx
@@ -6,9 +6,7 @@ import DocsLayout from "../../layouts/docs";
 
 ## First steps
 
-If you like to **learn by doing**, [our tutorial will help you learn how Replicate works by building a simple model](/docs/tutorial).
-
-If you prefer to **learn concepts first**, take a look at [our guide about how Replicate works](/docs/learn/how-it-works).
+If you like to **learn by doing**, [our tutorial will help you learn how Replicate works by building a simple model](/docs/tutorial). If you prefer to **learn concepts first**, take a look at [our guide about how Replicate works](/docs/learn/how-it-works).
 
 ## Install
 
