--- a/web/pages/docs/learn/how-it-works.mdx
+++ b/web/pages/docs/learn/how-it-works.mdx
@@ -104,8 +104,7 @@ This is the directory structure of a project:
 
 - `checkpoints/<checkpoint ID>/` – The files saved when you create a checkpoint, such as your trained weights.
 - `experiments/<experiment ID>/` – The files in your project's directory when an experiment was created, such as your source code.
-- `metadata/checkpoints/<checkpoints ID>.json` – A JSON file containing all the metadata about a checkpoint, include a pointer to the experiment ID it is part of.
-- `metadata/experiments/<experiment ID>.json` – A JSON file containing all the metadata about an experiment.
+- `metadata/experiments/<experiment ID>.json` – A JSON file containing all the metadata about an experiment and its checkpoints.
 - `metadata/heartbeats/<experiment ID>.json` – A timestamp that is written periodically by a running experiment to mark it as running. When the experiment stops writing this file and the timestamp times out, the experiment is considered stopped.
 
 ## Remote execution
