--- a/web/pages/docs/tutorial/index.mdx
+++ b/web/pages/docs/tutorial/index.mdx
@@ -259,9 +259,11 @@ You don't have to keep track of what you changed in your experiments, because Re
 
 ## What's next
 
-So far, everything we've been doing has been local on a single machine. But in practice, you probably want to train on a separate machine with GPUs, or perhaps multiple machines at the same time. Or, perhaps you want to share your experiments with other people in your team.
+So far, everything we've been doing has been local on a single machine. But in practice, you probably want to train on a GPU machine, or multiple machines at the same time. Or, perhaps you want to work on the model with other people.
 
-Take a look at [the guide to working with remote machines](/docs/tutorial/remote-machines) to learn more about this.
+Replicate can store experiment data on cloud storage so you can track all this in one place.
+
+Take a look at [the guide to storing data in the cloud](/docs/tutorial/cloud-storage) to learn more about this.
 
 </DocsLayout>
 
