Change Iris URL

--- a/web/pages/docs/tutorial/index.mdx
+++ b/web/pages/docs/tutorial/index.mdx
@@ -7,7 +7,7 @@ import Note from "../../../components/note";
 
 This guide will help you learn how Replicate works by building a simple model.
 
-We're going to make a model that classifies Iris plants, trained on the [Iris dataset](https://archive.ics.uci.edu/ml/datasets/iris). It's an intentionally simple model that trains really fast, just so we can show you how Replicate works.
+We're going to make a model that classifies Iris plants, trained on the [Iris dataset](https://en.wikipedia.org/wiki/Iris_flower_data_set). It's an intentionally simple model that trains really fast, just so we can show you how Replicate works.
 
 ## Install dependencies
 
@@ -266,4 +266,3 @@ Replicate can store experiment data on cloud storage so you can track all this i
 Take a look at [the guide to storing data in the cloud](/docs/tutorial/cloud-storage) to learn more about this.
 
 </DocsLayout>
-
